--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_notificaciones.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_notificaciones.xml
@@ -41,14 +41,16 @@
         android:id="@+id/barraNotificaciones"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/headerNotificaciones"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/headerNotificaciones">
 
         <TextView
             android:id="@+id/txtNuevasAlertas"
@@ -56,16 +58,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Nuevas alertas"
+            android:textColor="#000000"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/btnBorrarTodas"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_cerrar"
-            android:contentDescription="Eliminar todas las notificaciones" />
+            android:contentDescription="Eliminar todas las notificaciones"
+            android:src="@drawable/ic_trash" />
     </LinearLayout>
 
     <!-- LISTA DE NOTIFICACIONES -->
