--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -150,19 +150,20 @@
                 android:id="@+id/chipNO2"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:paddingStart="14dp"
-                android:paddingEnd="14dp"
-                android:gravity="center_vertical"
+                android:layout_marginEnd="8dp"
                 android:background="@drawable/bg_chip_unselected"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingStart="14dp"
+                android:paddingEnd="14dp">
 
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/cloud"/>
+                    android:src="@drawable/cloud" />
 
                 <TextView
-                    android:layout_width="43dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:fontFamily="@font/roboto_light"
