--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
@@ -70,8 +70,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="32dp"
-                android:visibility="gone">
+                android:padding="32dp">
 
                 <TextView
                     android:layout_width="wrap_content"
