--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_notificaciones.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_notificaciones.xml
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Nuevas alertas"
+            android:text="Hoy"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold" />
