--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/user_page.xml
@@ -241,6 +241,7 @@
                                     android:textSize="14sp" />
 
                                 <ImageView
+                                    android:id="@+id/img_wifi"
                                     android:layout_width="80dp"
                                     android:layout_height="80dp"
                                     android:layout_marginTop="10dp"
