--- a/src/cliente/src/css/userPage.css
+++ b/src/cliente/src/css/userPage.css
@@ -736,6 +736,8 @@
     border-radius: 12px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
     text-align: center;
+    position: relative;
+    cursor: pointer;
 }
 
 .carita-grafica img{
@@ -751,6 +753,30 @@
     width: 100% !important;
     height: 100% !important;
     display: block !important;
+}
+
+/* Hover de Mensaje para las caritas */
+
+.tooltip-carita {
+    position: absolute;
+    top: 0;
+    right: 60px;
+    background: white;
+    color: #000;
+    padding: 8px 12px;
+    border-radius: 8px;
+    width: 190px;
+    box-shadow: 0 4px 14px rgba(0,0,0,0.15);
+    font-family: 'Open Sans', sans-serif;
+    font-size: clamp(11px, 1vw, 0.8rem);
+    font-weight: 400;
+    line-height: 1.3;
+    transition: opacity 0.1s ease;
+    z-index: 9999 !important;
+}
+
+.tooltip-carita.hidden {
+    display: none;
 }
 
 
