--- a/src/cliente/src/css/perfil.css
+++ b/src/cliente/src/css/perfil.css
@@ -74,9 +74,11 @@
 }
 
 .perfil-info {
+    width: auto;
     text-align: left;
-    width: 15em;
-    margin-left:1em
+
+
+
 }
 
 .perfil-info h3 {
@@ -101,7 +103,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 1em;
+
 }
 
 .btn-edit,
@@ -220,66 +222,66 @@
 /* region --- RESPONSIVE --- */
 @media (max-width: 1030px) {
 
-        /* Ocultar parte izquierda */
-        .perfil-left {
-            display: none;
-        }
-
-        .perfil-divider {
-            display: none;
-        }
-
-        /* Contenido centrado vertical + horizontal */
-        .perfil-wrapper {
-            flex-direction: column;
-            height: calc(100vh - 72px); /* ocupa casi toda la altura */
-            justify-content: center; /* centra vertical */
-            align-items: center; /* centra horizontal */
-            gap: 2em;
-            padding: 0 1em;
-        }
-
-        .perfil-avatar {
-            width: 7.5em;
-            margin-bottom: 0.8em;
-        }
-        .perfil-info {
-            text-align: center;
-            width: 15em;
-        }
-
-        .perfil-info h3 {
-            font-size: 1.1em;
-            margin-bottom: 0.3em;
-        }
-
-        .info-value {
-            font-size: 1em;
-            margin-bottom: 1em;
-        }
-
-        .btn-edit,
-        .btn-logout {
-            width: 10em;
-            padding: 0.7em 0;
-            font-size: 1em;
-            margin-top: 1em;
-        }
-
-        /* Popup adaptable */
-        .popup-box {
-            width: 85%;
-            padding: 1.8em;
-        }
-
-        .popup-title {
-            font-size: 1.1em;
-        }
-
-        .popup-buttons a,
-        .popup-buttons button {
-            padding: 0.7em 1.3em;
-            font-size: 1em;
-        }
+    /* Ocultar parte izquierda */
+    .perfil-left {
+        display: none;
     }
+
+    .perfil-divider {
+        display: none;
+    }
+
+    /* Contenido centrado vertical + horizontal */
+    .perfil-wrapper {
+        flex-direction: column;
+        height: calc(100vh - 72px); /* ocupa casi toda la altura */
+        justify-content: center; /* centra vertical */
+        align-items: center; /* centra horizontal */
+        gap: 2em;
+        padding: 0 1em;
+    }
+
+    .perfil-avatar {
+        width: 7.5em;
+        margin-bottom: 0.8em;
+    }
+    .perfil-info {
+        text-align: center;
+        width: 15em;
+    }
+
+    .perfil-info h3 {
+        font-size: 1.1em;
+        margin-bottom: 0.3em;
+    }
+
+    .info-value {
+        font-size: 1em;
+        margin-bottom: 1em;
+    }
+
+    .btn-edit,
+    .btn-logout {
+        width: 10em;
+        padding: 0.7em 0;
+        font-size: 1em;
+        margin-top: 1em;
+    }
+
+    /* Popup adaptable */
+    .popup-box {
+        width: 85%;
+        padding: 1.8em;
+    }
+
+    .popup-title {
+        font-size: 1.1em;
+    }
+
+    .popup-buttons a,
+    .popup-buttons button {
+        padding: 0.7em 1.3em;
+        font-size: 1em;
+    }
+}
 /* endregion */
