--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -46,8 +46,27 @@
             android:hint="Buscar ubicación..."
             android:textSize="16sp"
             android:paddingStart="12dp"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:imeOptions="actionSearch"
+            android:singleLine="true"/>
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/listaSugerencias"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_busqueda"
+        android:padding="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:translationY="2dp"
+        android:elevation="14dp"
+        android:visibility="gone"
+        android:divider="#DDDDDD"
+        android:dividerHeight="1dp"
+        app:layout_constraintTop_toBottomOf="@id/layoutBusqueda"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <!-- ==========================================================
@@ -126,7 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
-                android:text="Ahora"
+                android:text="Hoy"
                 android:textColor="#059669"
                 android:textSize="15sp"
                 android:textStyle="bold" />
