--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -123,33 +123,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto"
-                android:text="Índice"
+                android:text="Índice calidad del aire"
                 android:textColor="#059669"
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
         <!-- CHIP FECHA -->
-        <LinearLayout
-            android:id="@+id/chipFecha"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:background="@drawable/bg_chip"
-            android:gravity="center"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/txtChipFecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto"
-                android:text="Hoy"
-                android:textColor="#059669"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </LinearLayout>
 
     </LinearLayout>
 
@@ -517,37 +497,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="20%"
-                        android:textSize="15sp"
-                        android:textColor="#64748B"/>
-                </LinearLayout>
-
-                <!-- INSALUBRE -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="32dp"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginBottom="8dp">
-
-                    <View
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:background="#FB923C"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginStart="4dp"/>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Insalubre"
-                        android:textColor="#1F2B38"
-                        android:textSize="15sp"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2%"
                         android:textSize="15sp"
                         android:textColor="#64748B"/>
                 </LinearLayout>
