--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -12,10 +12,13 @@
         android:id="@+id/mapaOSM"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 
 
     <!-- ==========================================================
@@ -32,7 +35,10 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        >
 
         <ImageView
             android:layout_width="20dp"
@@ -48,7 +54,11 @@
             android:paddingStart="12dp"
             android:background="@android:color/transparent"
             android:imeOptions="actionSearch"
+            android:cursorVisible="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:singleLine="true"/>
+
     </LinearLayout>
 
     <ListView
@@ -420,17 +430,15 @@
             android:gravity="center"
             android:textColor="#059669"
             android:layout_marginTop="6dp"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/roboto_bold" />
 
 
         <!-- LISTA SCROLLEABLE -->
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.73"
-            android:paddingTop="18dp"
-            android:clipToPadding="false">
-
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -526,7 +534,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="8%"
+                        android:text="10%"
                         android:textSize="15sp"
                         android:textColor="#64748B"/>
                 </LinearLayout>
@@ -541,9 +549,8 @@
             android:padding="12dp"
             android:background="#ECFDF5"
             android:orientation="horizontal"
-            android:layout_marginTop="14dp"
             android:gravity="center_vertical"
-            android:layout_marginBottom="56dp"
+            android:layout_marginTop="40dp"
             android:backgroundTint="#D1FAE5">
 
             <TextView
