--- a/src/cliente/src/css/mapaUser.css
+++ b/src/cliente/src/css/mapaUser.css
@@ -45,6 +45,7 @@ main{
 .mapa-main-container{
     width: 100%;
     height: 100%;
+    min-height: 305px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     position: relative;
@@ -53,10 +54,19 @@ main{
 .mapa{
     width: 100%;
     height: 100%;
-    background-image: url('../img/mapaUserMapaPage.svg');
-    background-size: cover;
-    background-position: center;
     border-radius: 15px;
+    z-index: 1;
+}
+
+/* TODOS los paneles/flotantes por encima del mapa */
+.contaminantes-panel,
+.search-bar,
+.search-suggestions,
+.mapa-indice-container,
+.map-zoom-controls,
+.map-location-btn,
+.timeline-box{
+    z-index: 1000;
 }
 
 .contaminantes-panel{
@@ -122,6 +132,11 @@ main{
     width: 18px;
 }
 
+#TodosOpcionSelector img {
+    width: 24px;
+    margin-left: -3px;
+}
+
 .contaminante-option span{
     font-family: 'Open Sans', sans-serif;
     font-size: clamp(11px, 1vw, 0.8rem);
@@ -130,6 +145,11 @@ main{
     margin-top: 6.8px;
 
 }
+
+.contaminante-option.active {
+    background-color: #A7F3D0 !important;
+}
+
 
 .search-bar{
     position: absolute;
@@ -140,7 +160,7 @@ main{
     gap: 5px;
     background-color: white;
     height: 40px;
-    width: 220px;
+    width: 240px;
     border-radius: 12px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
     padding: 0 10px 0 10px;
@@ -166,19 +186,36 @@ main{
 
 .search-suggestions{
     min-height: 35px;
-    width: 220px;
+    width: 240px;
     background-color: white;
     border-radius: 12px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
     position: absolute;
     top: 55px;
     left: 155px;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     font-family: 'Open Sans', sans-serif;
     font-size: clamp(13px, 1vw, 14px);
     font-weight: 400;
     color: black;
     display: none;
+}
+
+.suggestion-item {
+    padding: 4px 0;
+    cursor: pointer;
+    border-radius: 12px;
+    padding: 10px;
+    margin: 5px 0 5px 0;
+}
+
+.suggestion-item:hover {
+    background-color: #f5f5f5;
+}
+
+.suggestion-item.sin-resultados {
+    cursor: default;
+    color: #777;
 }
 
 .mapa-indice-container{
