chore: mejora visual 4.0

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/res/layout/activity_mapas.xml
@@ -255,7 +255,7 @@
                     <ImageView
                         android:layout_width="28dp"
                         android:layout_height="28dp"
-                        android:src="@drawable/todos_contaminantes"/>
+                        android:src="@drawable/todosicono"/>
 
                     <TextView
                         android:layout_width="wrap_content"
