Filtro temporal mapa admin implementado

--- a/src/cliente/src/css/mapaUser.css
+++ b/src/cliente/src/css/mapaUser.css
@@ -356,7 +356,7 @@ main{
     width: 25px;
 }
 
-.timeline-box{
+.filtro-fecha-container{
     position: absolute;
     bottom: 10px;
     left: 10px;
